# Quantitative-Backtesting-and-Risk-Reporting-Engine

./: LICENSE  README.md
Quantitative Backtesting and Risk Reporting Engine/quantitative_backtester/: README.md  pyproject.toml
Quantitative Backtesting and Risk Reporting Engine/quantitative_backtester/backtester/: cli.py  data.py  execution.py  metrics.py  models.py  portfolio.py  report.py  strategy.py
Quantitative Backtesting and Risk Reporting Engine/quantitative_backtester/data/: sample_prices.csv
Quantitative Backtesting and Risk Reporting Engine/quantitative_backtester/output/run_2026-02-09_12-15-22/: config.json  equity_curve.csv  metrics.json  summary.md  trades.csv
Quantitative Backtesting and Risk Reporting Engine/quantitative_backtester/tests/: test_data.py  test_execution.py  test_metrics.py  test_portfolio.py  test_strategy.py
