[project]
name = "quant-backtester"
version = "0.1.0"
description = "Quant-style backtesting and risk report engine"
requires-python = ">=3.10"

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]